# lab-2-oop-sfml

./: CMakeLists.txt  README.md
src/: Block.cpp  Block.h  Bob.cpp  Bob.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Item.cpp  Item.h  Object.cpp  Object.h  Player.cpp  Player.h  main.cpp
